# clawgraph

./: .gitignore  README.md  pyproject.toml
.agent/skills/release-management/: SKILL.md
.agent/workflows/: latex_compile.md  release.md
.github/workflows/: test.yml
clawgraph/: __init__.py
clawgraph/bag/: __init__.py  manager.py  node.py  patterns.py  skills.py
clawgraph/bag/patterns/: __init__.py  aggregator.py  document.py  verification.py
clawgraph/core/: __init__.py  exceptions.py  models.py  signals.py  timeline.py
clawgraph/orchestrator/: __init__.py  graph.py  hub.py  llm_node.py  llm_tools.py  prompts.py  so_prompts.py
clawgraph/storage/: archive.py
clawgraph/telemetry/: hud.py  links.py
examples/cto/: ARCHITECTURE.md  README.md  audit_demo.py  hud_mockup.html  nodes.py  parallel_analysis.py  reset_demo.py  run.py  server.py  start_background.sh  start_simulation.py  test_drift_logic.py  timeline_hud.html  verify_node_tool_triggers.py
examples/cto/artifacts/: Daily_Update_Sheet.csv  clinical_data_interim.md  fda_feedback_letter.md  manufacturing_batch_record_v1.md  milestone_confirmation_memo.md  patient_sync_raw.csv  preliminary_label_v1.md  protocol_v1.md  regional_clearance_q3.md  regional_submission_plan.md  safety_signals_q2.md  site_feasibility_report.md  source_docs_v1.md  stability_test_report_q1.md  unformatted_modules_v2.md
examples/cto/nodes/: __init__.py  bags.py  clinical_ops.py  clinical_reg.py  cmc_reg.py  llm_utils.py  marketing.py  reg_ops.py  strategy.py
examples/cto/notes/: 01_simulation_enrichment.md
examples/cto/research/: regulatory_standards.md
examples/cto/scripts/: verify_enrichment.py  verify_tools_end_to_end.py
examples/cto/skills/: cmc_stability.md  document_alignment_checker.md  patient_coordination.md  regulatory_affairs.md  supporting_roles.md
examples/cto/tools/: excel_bridge.py  gmail_api.py  google_search.py  notary_log.py  pdf_parser.py  stats_calc.py
examples/quickstart/: README.md  index.html  llm_node.py  run.py  server.py
notes/: 01_PLAN.md  02_BRS.md  03_FRS.md  04_requirements.md  05_ARCHITECTURE.md  06_patterns.md  07_APPENDIX.md  07_artifacts.md  07_use_cases.md  08_walkthrough.md  09_library_structure.md  10_clawnode_spec.md  11_use_case_cto.md  12_clawoutput_spec.md  13_user_story.md  14_llm_orchestrator_plan.md  15_test_gap_remediation.md  16_ORCHESTRATOR_STABILITY.md  temp_audit_report.txt
notes/plan/: 01_foundation.md  02_orchestration.md  03_super_orchestrator.md  04_ui_telemetry.md  05_hardening_deployment.md
tests/: conftest.py  test_bag.py  test_example_cto.py  test_models.py  test_orchestrator.py  test_patterns.py  test_signals.py  test_skills.py
tests/bag/: test_bag.py  test_bag_contract.py  test_patterns.py  test_skills.py
tests/core/: test_inspect.py  test_models.py  test_signals.py  test_timeline.py
tests/orchestrator/: conftest.py  test_audit_gaps.py  test_audit_policy.py  test_clawbag.py  test_dead_end.py  test_drift.py  test_e2e_lifecycle.py  test_guardrail.py  test_hud_snapshot.py  test_inject_info.py  test_injection_security.py  test_llm_tools_bugs.py  test_max_iterations.py  test_partial_resolve.py  test_pruning.py  test_pruning_verification.py  test_route_signal.py  test_so_prompts.py
tests/storage/: test_archive.py
tests/telemetry/: test_hud.py  test_links.py
(+41 files in other folders)
